# transcriber_with_OCR

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/routes/: extraction.py
app/core/: config.py
app/services/: line_detector.py  logger.py  margin_detector.py  matplot_utils.py  preprocessor.py  reconciler.py  text_block.py
app/services/ocr/: __init__.py  base.py  google_vision.py  tesseract.py
tests/: synthetic.py  test_line_detector.py  test_margin_detector.py  test_ocr.py  test_preprocessor.py  test_reconciler.py  test_text_block.py
