[project]
name = "book-extractor"
version = "0.1.0"
description = "API REST que extrae texto de fragmentos marcados con corchetes en fotos de libros."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Valentin Lujambio" }]
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "opencv-python>=4.9",
    "numpy>=1.26",
    "pillow>=10.0",
    "pytesseract>=0.3.10",
    "google-cloud-vision>=3.7",
    "python-dotenv>=1.0",
    "matplotlib>=3.8",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
book-extractor = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
